crates/serde-feather/tests/ui/field_duplicate_rename.stderr
error: duplicate serde field attribute `rename`
 --> tests/ui/field_duplicate_rename.rs:5:31
  |
5 |     #[serde(rename = "first", rename = "second")]
  |                               ^^^^^^^^^^^^^^^^^
